minified bgss.js

--- a/164928.html
+++ b/164928.html
@@ -170,7 +170,7 @@
     <script src="js/jquery.min.js"></script>
     <script src="js/what-input.min.js"></script>
     <script src="js/foundation.min.js"></script>
-    <script src="js/bgss.js"></script>
+    <script src="js/bgss.min.js"></script>
     <script>
       $(document).foundation();
       $(document).ready(bgss.init_164928);
