Clans of Caledonia: display VPs per imported goods

--- a/216132.html
+++ b/216132.html
@@ -143,6 +143,20 @@
       </div>
       <!-- tab for results -->
       <div class="tabs-panel" id="results">
+        <p>
+          <span lang="en">Victory Points per imported goods: </span>
+          <span lang="fr">Points de victoire par marchandise import&eacute;e : </span>
+          <span lang="en">Cotton</span>
+          <span lang="fr">coton</span>
+          = <span id="vp_cotton"></span>,
+          <span lang="en">Tobacco</span>
+          <span lang="fr">tabac</span>
+          = <span id="vp_tobacco"></span>,
+          <span lang="en">Sugar Cane</span>
+          <span lang="fr">canne &agrave; sucre</span>
+          = <span id="vp_sugar"></span>.
+        </p>
+        <p>&nbsp;</p>
         <table>
           <thead>
             <tr>
