--- a/164928.html
+++ b/164928.html
@@ -10,17 +10,12 @@
   <body>
     <div class="top-bar">
       <div class="top-bar-left">
-        <a class="menu-icon" href="."></a>
-        &nbsp;
-        <span id="title"><!-- dynamic --></span>
+        <a class="menu-icon" href="."></a>&nbsp;<span id="title"><!-- dynamic --></span>
       </div>
     </div>
     <ul class="tabs" data-tabs id="tabs">
       <!-- dynamic -->
-      <li class="tabs-title"><a href="#results">
-          <span lang="en">Results</span>
-          <span lang="fr">R&eacute;sultats</span>
-      </a></li>
+      <li class="tabs-title"><a href="#results">=</a></li>
     </ul>
     <div class="tabs-content" data-tabs-content="tabs" id="tabs-content">
       <!-- per-player tab to be cloned -->
@@ -173,7 +168,7 @@
     <script src="js/bgss.min.js"></script>
     <script>
       $(document).foundation();
-      $(document).ready(bgss.init_164928);
+      $(document).ready(bgss.init_game);
     </script>
   </body>
 </html>
