--- a/193738.html
+++ b/193738.html
@@ -10,17 +10,12 @@
   <body>
     <div class="top-bar">
       <div class="top-bar-left">
-        <a class="menu-icon" href="."></a>
-        &nbsp;
-        <span id="title"><!-- dynamic --></span>
+        <a class="menu-icon" href="."></a>&nbsp;<span id="title"><!-- dynamic --></span>
       </div>
     </div>
     <ul class="tabs" data-tabs id="tabs">
       <!-- dynamic -->
-      <li class="tabs-title"><a href="#results">
-          <span lang="en">Results</span>
-          <span lang="fr">R&eacute;sultats</span>
-      </a></li>
+      <li class="tabs-title"><a href="#results">=</a></li>
     </ul>
     <div class="tabs-content" data-tabs-content="tabs" id="tabs-content">
       <!-- per-player tab to be cloned -->
@@ -148,7 +143,7 @@
                 <label lang="fr" for="job" class="text-right middle">Jeton march&eacute; de l'emploi</label>
               </div>
               <div class="small-3 cell switch">
-                <input type="checkbox" id="job" class="switch-input">
+                <input type="checkbox" id="job" class="highlander switch-input">
                 <label class="switch-paddle" for="job"></label>
               </div>
             </div>
@@ -200,7 +195,7 @@
     <script src="js/bgss.min.js"></script>
     <script>
       $(document).foundation();
-      $(document).ready(bgss.init_193738);
+      $(document).ready(bgss.init_game);
     </script>
   </body>
 </html>
