--- a/124361.html
+++ b/124361.html
@@ -4,23 +4,18 @@
     <meta charset="utf-8"/>
     <meta http-equiv="x-ua-compatible" content="ie=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-    <title><!-- dynamic --></title>
+    <title></title>
     <link rel="stylesheet" href="css/foundation.min.css"/>
   </head>
   <body>
     <div class="top-bar">
       <div class="top-bar-left">
-        <a class="menu-icon" href="."></a>
-        &nbsp;
-        <span id="title"><!-- dynamic --></span>
+        <a class="menu-icon" href="."></a>&nbsp;<span id="title"><!-- dynamic --></span>
       </div>
     </div>
     <ul class="tabs" data-tabs id="tabs">
       <!-- dynamic -->
-      <li class="tabs-title"><a href="#results">
-          <span lang="en">Results</span>
-          <span lang="fr">R&eacute;sultats</span>
-      </a></li>
+      <li class="tabs-title"><a href="#results">=</a></li>
     </ul>
     <div class="tabs-content" data-tabs-content="tabs" id="tabs-content">
       <!-- per-player tab to be cloned -->
@@ -227,7 +222,7 @@
                 <label lang="fr" for="first" class="text-right middle">Premier joueur &agrave; finir</label>
               </div>
               <div class="small-3 cell switch">
-                <input type="checkbox" id="first" class="switch-input">
+                <input type="checkbox" id="first" class="highlander switch-input">
                 <label class="switch-paddle" for="first"></label>
               </div>
             </div>
@@ -281,7 +276,7 @@
     <script src="js/bgss.min.js"></script>
     <script>
       $(document).foundation();
-      $(document).ready(bgss.init_124361);
+      $(document).ready(bgss.init_game);
     </script>
   </body>
 </html>
