--- a/216132.html
+++ b/216132.html
@@ -10,17 +10,12 @@
   <body>
     <div class="top-bar">
       <div class="top-bar-left">
-        <a class="menu-icon" href="."></a>
-        &nbsp;
-        <span id="title"><!-- dynamic --></span>
+        <a class="menu-icon" href="."></a>&nbsp;<span id="title"><!-- dynamic --></span>
       </div>
     </div>
     <ul class="tabs" data-tabs id="tabs">
       <!-- dynamic -->
-      <li class="tabs-title"><a href="#results">
-          <span lang="en">Results</span>
-          <span lang="fr">R&eacute;sultats</span>
-      </a></li>
+      <li class="tabs-title"><a href="#results">=</a></li>
     </ul>
     <div class="tabs-content" data-tabs-content="tabs" id="tabs-content">
       <!-- per-player tab to be cloned -->
@@ -55,7 +50,7 @@
                 <label lang="fr" for="processed" class="text-right middle">Nombre de FIXME</label>
               </div>
               <div class="small-3 cell">
-                <input type="number" id="processed" min="0" data-index="02">
+                <input type="number" id="processed" min="0" data-index="03">
               </div>
             </div>
             <!-- amount of money -->
@@ -65,7 +60,7 @@
                 <label lang="fr" for="money" class="text-right middle">Argent (&pound;)</label>
               </div>
               <div class="small-3 cell">
-                <input type="number" id="money" data-index="03">
+                <input type="number" id="money" data-index="04">
               </div>
             </div>
             <!-- number of hops -->
@@ -75,7 +70,7 @@
                 <label lang="fr" for="hops" class="text-right middle">Nombre de houblon</label>
               </div>
               <div class="small-3 cell">
-                <input type="number" id="hops" min="0" data-index="02">
+                <input type="number" id="hops" min="0" data-index="05">
               </div>
             </div>
             <!-- number of cotton -->
@@ -85,7 +80,7 @@
                 <label lang="fr" for="cotton" class="text-right middle">Nombre de coton</label>
               </div>
               <div class="small-3 cell">
-                <input type="number" id="cotton" min="0" data-index="02">
+                <input type="number" id="cotton" min="0" data-index="06">
               </div>
             </div>
             <!-- number of tobacco -->
@@ -95,7 +90,7 @@
                 <label lang="fr" for="tobacco" class="text-right middle">Nombre de tabac</label>
               </div>
               <div class="small-3 cell">
-                <input type="number" id="tobacco" min="0" data-index="02">
+                <input type="number" id="tobacco" min="0" data-index="07">
               </div>
             </div>
             <!-- number of sugar cane -->
@@ -105,7 +100,7 @@
                 <label lang="fr" for="sugar" class="text-right middle">Nombre de canne &agrave; sucre</label>
               </div>
               <div class="small-3 cell">
-                <input type="number" id="sugar" min="0" data-index="02">
+                <input type="number" id="sugar" min="0" data-index="08">
               </div>
             </div>
             <!-- number of export contracts -->
@@ -115,7 +110,7 @@
                 <label lang="fr" for="contracts" class="text-right middle">Nombre de contrats d'export</label>
               </div>
               <div class="small-3 cell">
-                <input type="number" id="contracts" min="0" data-index="02">
+                <input type="number" id="contracts" min="0" data-index="09">
               </div>
             </div>
             <!-- number of settlements -->
@@ -125,7 +120,7 @@
                 <label lang="fr" for="settlements" class="text-right middle">Nombre de FIXME</label>
               </div>
               <div class="small-3 cell">
-                <input type="number" id="settlements" min="0" data-index="02">
+                <input type="number" id="settlements" min="0" data-index="10">
               </div>
             </div>
             <!-- score -->
@@ -190,7 +185,7 @@
     <script src="js/bgss.min.js"></script>
     <script>
       $(document).foundation();
-      $(document).ready(bgss.init_216132);
+      $(document).ready(bgss.init_game);
     </script>
   </body>
 </html>
