--- a/193738.html
+++ b/193738.html
@@ -10,7 +10,7 @@
   <body>
     <div class="top-bar">
       <div class="top-bar-left">
-        <a class="menu-icon" href="."></a>&nbsp;<span id="title"><!-- dynamic --></span>
+        <a class="menu-icon" style="margin-right: 1em" href="."></a><span id="title"><!-- dynamic --></span>
       </div>
     </div>
     <ul class="tabs" data-tabs id="tabs">
