added Lost Cities

--- a/124361.html
+++ b/124361.html
@@ -259,14 +259,12 @@
           </tbody>
         </table>
         <p>&nbsp;</p>
-        <p lang="en">
-          <i>Tie breaker</i>: player with the "Pr&aelig;fectus Magnus" card or
-          whoever would have received it next.
-        <p>
-        <p lang="fr">
-          <i>D&eacute;partage en cas d'&eacute;galit&eacute;</i>: joueur ayant la carte
-          "Pr&aelig;fectus Magnus" ou bien le prochain qui l'aurait re&ccedil;u.
-        <p>
+        <p lang="en"><i>Tie breaker</i>:
+          player with the "Pr&aelig;fectus Magnus" card or whoever would have received it next.
+        </p>
+        <p lang="fr"><i>D&eacute;partage en cas d'&eacute;galit&eacute;</i>:
+          joueur ayant la carte "Pr&aelig;fectus Magnus" ou bien le prochain qui l'aurait re&ccedil;u.
+        </p>
       </div>
     </div>
     <!-- JavaScript -->
